# simplecalc

./: CMakeLists.txt  resources.txt
include/: operations.h
simplecalc/: CMakeLists.txt
simplecalc/includes/: history.h  operations.h
simplecalc/src/: history.c  main.c  operations.c
src/: history.c  main.c  operations.c
